display list of records

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-INTEXll-49BF7D2C-5BF0-437D-AE61-DFDE56F4B1D6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-INTEXll-49BF7D2C-5BF0-437D-AE61-DFDE56F4B1D6;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Database1Connection": "Server=localhost; Port=5432;Database=burial;User ID=postgres;Password=Glimmer133!;"
   },
   "Logging": {
     "LogLevel": {
