--- a/INTEXll.csproj
+++ b/INTEXll.csproj
@@ -27,4 +27,8 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\modelagain.onnx" />
+  </ItemGroup>
+
 </Project>
